atualização do template

--- a/template.html
+++ b/template.html
@@ -17,7 +17,6 @@
             <div class="logo">
                 <a><img src="assets/LogoLeVi-White-removebg-preview (1).png" class="img">Pet Levi</a>
             </div>
-            <button class="hamburger"></button>
             <div class="nav-list">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
@@ -26,6 +25,11 @@
                     <li class="nav-item"><a href="#" class="nav-link">Contatos</a></li>
                 </ul>
             </div>
+            <div class="buttons">
+                <button class="user-button"></button>
+                <button class="cart-button"></button>
+            </div>
+            <button class="hamburger"></button>
         </nav>
     </header>
 </body>
