add de itens de contato

--- a/cadastro.html
+++ b/cadastro.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="textfield">
                     <label>Digite seu email:</label>
-                    <input type="text" id="emailCadastro" placeholder="Digite seu email:">
+                    <input type="email" id="emailCadastro" placeholder="Digite seu email:">
                 </div>
                 <div class="textfield">
                     <label>Crie uma senha:</label>
