--- a/template.html
+++ b/template.html
@@ -20,7 +20,6 @@
             <div class="nav-list">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Serviços</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Acessórios</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contatos</a></li>
                 </ul>
@@ -32,6 +31,12 @@
             <button class="hamburger"></button>
         </nav>
     </header>
+
+<div>
+    <section>
+
+    </section>
+</div>
 
 <div class="section-contatos">
     <section>
