add destaques e contatos

--- a/template.html
+++ b/template.html
@@ -35,12 +35,66 @@
     <div class="section">
         <div class="section-gallery">
             <section>
-                <img src="assets/furao (1).jpg" alt="">
-                <img src="assets/passaro (1).jpg" alt="">
-                <img src="assets/doguinho (1).jpg" alt="">
-                <img src="assets/gatinho (1).jpg" alt="">
-                <img src="assets/hamster (1).jpg" alt="">
+                <img class="gallery" src="assets/furao (1).jpg" alt="">
+                <img class="gallery" src="assets/passaro (1).jpg" alt="">
+                <img class="gallery" src="assets/doguinho (1).jpg" alt="">
+                <img class="gallery" src="assets/gatinho (1).jpg" alt="">
+                <img class="gallery" src="assets/hamster (1).jpg" alt="">
             </section>
+        </div>
+
+        <div class="destaques">
+            <p>____________</p>
+            <br>
+            <p>Destaques</p>
+            <p>____________</p>
+            <br>
+        </div>
+
+        <div class="section-produtos">
+            <section>
+                <div class="item1">
+                    <div class="produto1">
+                        <li><img src="assets/golden-salmao-main.png" onclick="slider('assets/golden-salmao.png')"></li>
+                    </div>
+                    <div class="home-text">
+                        <h1>Ração Golden Para<br>Gatos Castrados</h1>
+                        <h5>Sabor salmão 1,0kg</h5>
+                        <h3>R$31,99</h3>
+                        <a href="#" class="btn">Adicionar ao carrinho</a>
+                    </div>
+                </div>
+                <div class="item2">
+                    <div class="produto2">
+                        <li><img src="assets/golden-carne-main.png" onclick="slider('assets/golden-carne.png')"></li>
+                    </div>
+                    <div class="home-text">
+                        <h1>Ração Golden Para<br>Gatos Castrados</h1>
+                        <h5>Sabor carne 1,0kg</h5>
+                        <h3>R$31,99</h3>
+                        <a href="#" class="btn">Adicionar ao carrinho</a>
+                    </div>
+                </div>
+                <div class="item3">
+                    <div class="produto3">
+                        <li><img src="assets/golden-frango-main.png" onclick="slider('assets/golden-frango.png')"></li>
+                    </div>
+                    <div class="home-text">
+                        <h1>Ração Golden Para<br>Gatos Castrados</h1>
+                        <h5>Sabor frango 1,0kg</h5>
+                        <h3>R$31,99</h3>
+                        <a href="#" class="btn">Adicionar ao carrinho</a>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <div class="contatos">
+            <p>____________</p>
+            <br>
+            <p>Contatos</p>
+            <p>____________</p>
+            <br>
         </div>
 
         <div class="section-contatos">
