--- a/golden.html
+++ b/golden.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/golden.css">
     <script defer src="menu.js"></script>
-    <title>Template PetLevi</title>
+    <title>Produto PetLevi</title>
 </head>
 
 <body>
@@ -23,6 +23,10 @@
                     <li class="nav-item"><a href="#" class="nav-link">Acessórios</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contatos</a></li>
                 </ul>
+            </div>
+            <div class="buttons">
+                <button class="user-button"></button>
+                <button class="cart-button"></button>
             </div>
             <button class="hamburger"></button>
         </nav>
