alterações na tela de login/mexendo ainda!

--- a/login.html
+++ b/login.html
@@ -28,6 +28,7 @@
     <div class="main-login">
         <div class="right-login">
             <div class="card-login">
+                <img src="assets/LogoLeVi-White-removebg-preview (1).png" style="width:15%">
                 <h1>Login</h1>
                 <div class="textfield">
                     <label for="usuarioLogin">Usuário:</label>
