add tabela nutricional

--- a/golden.html
+++ b/golden.html
@@ -45,22 +45,71 @@
                     <h3>R$31,99</h3>
                     <a href="#" class="btn">Adicionar ao carrinho</a>
                 </div>
+
+                <div class="tabela">
+                    <p>____________</p>
+                    <br>
+                    <p>Tabela Nutricional</p>
+                    <p>____________</p>
+                    <br>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Componente</th>
+                            <th>Tipo</th>
+                            <th>Valor</th>
+                            <th>Unidade</th>
+                            <th>Equivalente</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Umidade</td>
+                            <td>máx</td>
+                            <td>10,00</td>
+                            <td>%</td>
+                            <td>100 g/kg</td>
+                        </tr>
+                        <tr>
+                            <td>Proteína Bruta</td>
+                            <td>mín</td>
+                            <td>33,50</td>
+                            <td>%</td>
+                            <td>330 g/kg</td>
+                        </tr>
+                        <tr>
+                            <td>Extrato Etéreo</td>
+                            <td>mín</td>
+                            <td>12,00</td>
+                            <td>%</td>
+                            <td>120 g/kg</td>
+                        </tr>
+                        <tr>
+                            <td>Matéria Mineral</td>
+                            <td>máx</td>
+                            <td>8,00</td>
+                            <td>%</td>
+                            <td>80 g/kg</td>
+                        </tr>
+                        <tr>
+                            <td>Matéria Fibrosa</td>
+                            <td>máx</td>
+                            <td>3,50</td>
+                            <td>%</td>
+                            <td>30,0 g/kg</td>
+                        </tr>
+                        <!-- Adicione mais linhas conforme necessário -->
+                        </tbody>
+                    </table>
+                </div>
             </section>
-
-            <div class="main">
-                <div class="row1">
-                    <li><img src="assets/golden-salmao-main.png" onclick="slider('assets/golden-salmao.png')"></li>
-                </div>
-
-                <div class="row2">
-                    <li><img src="assets/golden-carne-main.png" onclick="slider('assets/golden-carne.png')"></li>
-                </div>
-
-                <div class="row3">
-                    <li><img src="assets/golden-frango-main.png" onclick="slider('assets/golden-frango.png')"></li>
-                </div>
-            </div>
         </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
         <div class="section-contatos">
             <section>
                 <ul>
