--- a/carrinho.html
+++ b/carrinho.html
@@ -34,10 +34,10 @@
  
     <div class="section">
         <div class="seucarrinho">
-            <p>____________</p>
+            <p>_____________________________________________________</p>
             <br>
             <p>Seu Carrinho</p>
-            <p>____________</p>
+            <p>_____________________________________________________</p>
             <br>
         </div>
 
@@ -47,7 +47,7 @@
                     <tr>
                         <td><img src="assets/golden-salmao-main.png"></td>
                         <td><h1>Ração Golden Para<br>Gatos Castrados</h1></td>
-                        <td>Sabor salmão 1,0kg</td>
+                        <td><h5>Sabor salmão 1,0kg</h5></td>
                         <td>R$34,99</td>
                     </tr>
                 </thead>
@@ -62,15 +62,17 @@
             </table>
         
             <p>Total do Carrinho: R$ 66,98</p>
+
+            <br>
         
             <a href="#" class="checkout-btn">Finalizar Compra</a>
         </section>
 
         <div class="contatos">
-            <p>____________</p>
+            <p>_____________________________________________________</p>
             <br>
             <p>Contatos</p>
-            <p>____________</p>
+            <p>_____________________________________________________</p>
             <br>
         </div>
 
