--- a/golden.html
+++ b/golden.html
@@ -116,6 +116,14 @@
         <br>
         <br>
 
+        <div class="contatos">
+            <p>_____________________________________________________</p>
+            <br>
+            <p>Contatos</p>
+            <p>_____________________________________________________</p>
+            <br>
+        </div>
+        
         <div class="section-contatos">
             <section>
                 <ul>
