--- a/login.html
+++ b/login.html
@@ -17,18 +17,14 @@
             <div class="logo">
                 <a><img src="assets/LogoLeVi-White-removebg-preview (1).png" class="img">Pet Levi</a>
             </div>
-            <div class="nav-list">
-            </div>
-            <div class="buttons">
-                <label class="lbl-login"><a href="./cadastro.html" style="text-decoration: none; color: white;">Cadastre-se</a></label>
-            </div>
-            <button class="hamburger"></button>
         </nav>
     </header>
     <div class="main-login">
+        <div class="left-login-image">
+            <img class="imagem" src="./assets/animais.svg" alt="imagem do menu inicial">
+        </div>
         <div class="right-login">
             <div class="card-login">
-                <img src="assets/LogoLeVi-White-removebg-preview (1).png" style="width:15%">
                 <h1>Login</h1>
                 <div class="textfield">
                     <label for="usuarioLogin">Usuário:</label>
@@ -40,6 +36,7 @@
                     <input type="password" id="senhaLogin" placeholder="Digite sua senha">
                 </div>
                 <button class="btn-login" id="login-btn">Login</button>
+                <p style="font-size: 12px;">Ainda não tem conta? <a style="color:white; font-weight: bolder; font-size: 13px;" href="./cadastro.html">Clique aqui.</a></p>
             </div>
         </div>
     </div>
