--- a/cadastro.html
+++ b/cadastro.html
@@ -18,15 +18,12 @@
             <div class="logo">
                 <a><img src="assets/LogoLeVi-White-removebg-preview (1).png" class="img">Pet Levi</a>
             </div>
-            <div class="nav-list">
-            </div>
-            <div class="buttons">
-                <label class="lbl-login"><a href="./login.html" style="text-decoration: none; color: white;">Login</a></label>
-            </div>
-            <button class="hamburger"></button>
         </nav>
     </header>
     <div class="main-cadastro">
+        <div class="left-cadastro-image">
+            <img class="imagem" src="./assets/animais.svg" alt="imagem do menu inicial">
+        </div>
         <div class="right-cadastro">
             <div class="card-cadastro">
                 <h1>Cadastre-se</h1>
@@ -47,6 +44,7 @@
                     <input type="password" id="senhaConfirmacaoCadastro" placeholder="Repita a senha">
                 </div>
                 <button class="btn-cadastro" id="btn-cadastro" type="submit">Cadastra-se</button>
+                <p style="font-size: 12px;">Já tem conta? <a style="color:white; font-weight: bolder; font-size: 13px;" href="./login.html">Clique aqui.</a></p>
             </div>
         </div>
     </div>
