--- a/template.html
+++ b/template.html
@@ -34,20 +34,24 @@
 
     <div class="section">
         <div class="section-gallery">
-            <section>
-                <img class="gallery" src="assets/furao (1).jpg" alt="">
-                <img class="gallery" src="assets/passaro (1).jpg" alt="">
-                <img class="gallery" src="assets/doguinho (1).jpg" alt="">
-                <img class="gallery" src="assets/gatinho (1).jpg" alt="">
-                <img class="gallery" src="assets/hamster (1).jpg" alt="">
-            </section>
+            <img class="gallery" src="assets/furao (1).jpg" alt="">
+            <img class="gallery" src="assets/passaro (1).jpg" alt="">
+            <img class="gallery" src="assets/doguinho (1).jpg" alt="">
+            <img class="gallery" src="assets/gatinho (1).jpg" alt="">
+            <img class="gallery" src="assets/hamster (1).jpg" alt="">
         </div>
 
         <div class="destaques">
-            <p>_____________________________________________________</p>
+            <br>
+            <br>
+            <br>
+            <hr>
             <br>
             <p>Destaques</p>
-            <p>_____________________________________________________</p>
+            <br>
+            <hr>
+            <br>
+            <br>
             <br>
         </div>
 
@@ -61,7 +65,7 @@
                         <h1>Ração Golden Para<br>Gatos Castrados</h1>
                         <h5>Sabor salmão 1,0kg</h5>
                         <h3>R$31,99</h3>
-                        <a href="#" class="btn">Adicionar ao carrinho</a>
+                        <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
                     </div>
                 </div>
                 <div class="item2">
@@ -72,7 +76,7 @@
                         <h1>Ração Golden Para<br>Gatos Castrados</h1>
                         <h5>Sabor carne 1,0kg</h5>
                         <h3>R$31,99</h3>
-                        <a href="#" class="btn">Adicionar ao carrinho</a>
+                        <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
                     </div>
                 </div>
                 <div class="item3">
@@ -83,17 +87,23 @@
                         <h1>Ração Golden Para<br>Gatos Castrados</h1>
                         <h5>Sabor frango 1,0kg</h5>
                         <h3>R$31,99</h3>
-                        <a href="#" class="btn">Adicionar ao carrinho</a>
+                        <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
                     </div>
                 </div>
             </section>
         </div>
 
         <div class="contatos">
-            <p>_____________________________________________________</p>
+            <br>
+            <br>
+            <br>
+            <hr>
             <br>
             <p>Contatos</p>
-            <p>_____________________________________________________</p>
+            <br>
+            <hr>
+            <br>
+            <br>
             <br>
         </div>
 
