--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="nav">
             <div class="logo">
-                <a><img src="assets/LogoLeVi-White-removebg-preview (1).png" class="img">Pet Levi</a>
+                <a href="./template.html"><img src="assets/LogoLeVi-White-removebg-preview (1).png" class="img">Pet Levi</a>
             </div>
         </nav>
     </header>
