--- a/template.html
+++ b/template.html
@@ -25,8 +25,12 @@
                 </ul>
             </div>
             <div class="buttons">
-                <button class="user-button"></button>
-                <button class="cart-button"></button>
+                <a href="login.html">
+                    <button class="user-button"></button>
+                </a>
+                <a href="carrinho.html">
+                    <button class="cart-button"></button>
+                </a>
             </div>
             <button class="hamburger"></button>
         </nav>
@@ -36,7 +40,7 @@
         <div class="section-gallery">
             <img class="gallery" src="assets/furao (1).jpg" alt="">
             <img class="gallery" src="assets/passaro (1).jpg" alt="">
-            <img class="gallery" src="assets/doguinho (1).jpg" alt="">
+            <img class="gallery" src="assets/doguinho(2).jpg" alt="">
             <img class="gallery" src="assets/gatinho (1).jpg" alt="">
             <img class="gallery" src="assets/hamster (1).jpg" alt="">
         </div>
@@ -59,7 +63,7 @@
             <section>
                 <div class="item1">
                     <div class="produto1">
-                        <li><img src="assets/golden-salmao-main.png" onclick="slider('assets/golden-salmao.png')"></li>
+                        <li><img src="assets/racao-golden-cat-removebg-preview.png" onclick="slider('assets/racao-golden-cat-removebg-preview.png')"></li>
                     </div>
                     <div class="home-text">
                         <h1>Ração Golden Para<br>Gatos Castrados</h1>
@@ -70,23 +74,97 @@
                 </div>
                 <div class="item2">
                     <div class="produto2">
-                        <li><img src="assets/golden-carne-main.png" onclick="slider('assets/golden-carne.png')"></li>
+                        <li><img src="assets/racao-golden-dog-removebg-preview.png" onclick="slider('assets/racao-golden-dog-removebg-preview.png')"></li>
                     </div>
                     <div class="home-text">
-                        <h1>Ração Golden Para<br>Gatos Castrados</h1>
-                        <h5>Sabor carne 1,0kg</h5>
-                        <h3>R$31,99</h3>
+                        <h1>Ração Golden Para<br>Cães Adultos</h1>
+                        <h5>Sabor Frango e Arroz 15,0kg</h5>
+                        <h3>R$176,90</h3>
                         <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
                     </div>
                 </div>
                 <div class="item3">
                     <div class="produto3">
-                        <li><img src="assets/golden-frango-main.png" onclick="slider('assets/golden-frango.png')"></li>
+                        <li><img src="assets/racao-umida-cat-removebg-preview.png" onclick="slider('assets/racao-umida-cat-removebg-preview.png')"></li>
                     </div>
                     <div class="home-text">
-                        <h1>Ração Golden Para<br>Gatos Castrados</h1>
-                        <h5>Sabor frango 1,0kg</h5>
-                        <h3>R$31,99</h3>
+                        <h1>Ração Golden Úmida Para<br>Gatos Castrados</h1>
+                        <h5>Sabor carne 70g</h5>
+                        <h3>R$3,99</h3>
+                        <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
+                    </div>
+                </div>
+                <div class="item4">
+                    <div class="produto4">
+                        <li><img src="assets/racao-umida-vet-removebg-preview.png" onclick="slider('assets/racao-umida-vet-removebg-preview.png')"></li>
+                    </div>
+                    <div class="home-text">
+                        <h1>Ração Royal Úmida<br>Recovery</h1>
+                        <h5>Sabor carne 195g</h5>
+                        <h3>R$47,99</h3>
+                        <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <div class="acessorios">
+            <br>
+            <br>
+            <br>
+            <hr>
+            <br>
+            <p>Acessórios</p>
+            <br>
+            <hr>
+            <br>
+            <br>
+            <br>
+        </div>
+
+        <div class="section-acessorios">
+            <section>
+                <div class="item1">
+                    <div class="produto1">
+                        <li><img src="assets/casinha-arranhador-removebg-preview.png" onclick="slider('assets/casinha-arranhador-removebg-preview.png')"></li>
+                    </div>
+                    <div class="home-text">
+                        <h1>Brinquedo Arranhador<br>Para Gatos</h1>
+                        <h5>Material: Madeira</h5>
+                        <h3>R$421,99</h3>
+                        <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
+                    </div>
+                </div>
+                <div class="item2">
+                    <div class="produto2">
+                        <li><img src="assets/casinha-cachorro-removebg-preview.png" onclick="slider('assets/casinha-cachorro-removebg-preview.png')"></li>
+                    </div>
+                    <div class="home-text">
+                        <h1>Casinha Para<br>Cães e Gatos</h1>
+                        <h5>Material: Madeira</h5>
+                        <h3>R$246,39</h3>
+                        <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
+                    </div>
+                </div>
+                <div class="item3">
+                    <div class="produto3">
+                        <li><img src="assets/fantasia-unicornio-removebg-preview.png" onclick="slider('assets/fantasia-unicornio-removebg-preview.png')"></li>
+                    </div>
+                    <div class="home-text">
+                        <h1>Fantasia Unicórnio <br>Para Gatos</h1>
+                        <h5>Cor: Rosa</h5>
+                        <h3>R$79,99</h3>
+                        <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
+                    </div>
+                </div>
+                <div class="item4">
+                    <div class="produto4">
+                        <li><img src="assets/coleira-peitoral-removebg-preview.png" onclick="slider('assets/coleira-peitoral-removebg-preview.png')"></li>
+                    </div>
+                    <div class="home-text">
+                        <h1>Peitoral Para<br>Cães e Gatos</h1>
+                        <h5>Cor: Menta/Verde Claro</h5>
+                        <h3>R$41,99</h3>
                         <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
                     </div>
                 </div>
