--- a/golden.html
+++ b/golden.html
@@ -26,8 +26,12 @@
                 </ul>
             </div>
             <div class="buttons">
-                <button class="user-button"></button>
-                <button class="cart-button"></button>
+                <a href="login.html">
+                    <button class="user-button"></button>
+                </a>
+                <a href="carrinho.html">
+                    <button class="cart-button"></button>
+                </a>
             </div>
             <button class="hamburger"></button>
         </nav>
@@ -36,7 +40,7 @@
 
     <div class="home">
         <div style="grid-area: a;" class="home-img">
-            <img src="assets/golden-salmao.png" class="one">
+            <img src="assets/racao-golden-cat-removebg-preview.png" class="one">
         </div>
 
         <div style="grid-area: b;" class="home-text">
