--- a/carrinho.html
+++ b/carrinho.html
@@ -25,8 +25,12 @@
                 </ul>
             </div>
             <div class="buttons">
-                <button class="user-button"></button>
-                <button class="cart-button"></button>
+                <a href="login.html">
+                    <button class="user-button"></button>
+                </a>
+                <a href="carrinho.html">
+                    <button class="cart-button"></button>
+                </a>
             </div>
             <button class="hamburger"></button>
         </nav>
@@ -45,7 +49,7 @@
             <table>
                 <thead>
                     <tr>
-                        <td><img src="assets/golden-salmao-main.png"></td>
+                        <td><img src="assets/racao-golden-cat-removebg-preview.png"></td>
                         <td><h1>Ração Golden Para<br>Gatos Castrados</h1></td>
                         <td><h5>Sabor salmão 1,0kg</h5></td>
                         <td>R$34,99</td>
@@ -53,15 +57,15 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><img src="assets/golden-carne-main.png"></td>
-                        <td><h1>Ração Golden Para<br>Gatos Castrados</h1></td>
-                        <td><h5>Sabor carne 1,0kg</h5></td>
-                        <td>R$31,99</td>
+                        <td><img src="assets/fantasia-unicornio-removebg-preview.png"></td>
+                        <td><h1>Fantasia Unicórnio <br>Para Gatos</h1></td>
+                        <td><h5>Cor: Rosa</h5></td>
+                        <td>R$79,99</td>
                     </tr>
                 </tbody>
             </table>
 
-            <p>Total do Carrinho: R$ 66,98</p>
+            <p>Total do Carrinho: R$ 114,98</p>
 
             <br>
 
