alteração na linkagem

--- a/carrinho.html
+++ b/carrinho.html
@@ -19,7 +19,7 @@
             </div>
             <div class="nav-list">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                    <li class="nav-item"><a href="template.html" class="nav-link">Início</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Acessórios</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Contatos</a></li>
                 </ul>
