--- a/template.html
+++ b/template.html
@@ -61,17 +61,19 @@
 
         <div class="section-produtos">
             <section>
-                <div class="item1">
-                    <div class="produto1">
-                        <li><img src="assets/racao-golden-cat-removebg-preview.png" onclick="slider('assets/racao-golden-cat-removebg-preview.png')"></li>
+                <a href="./golden.html">
+                    <div class="item1">
+                        <div class="produto1">
+                            <li><img src="assets/racao-golden-cat-removebg-preview.png" onclick="slider('assets/racao-golden-cat-removebg-preview.png')"></li>
+                        </div>
+                        <div class="home-text">
+                            <h1>Ração Golden Para<br>Gatos Castrados</h1>
+                            <h5>Sabor salmão 1,0kg</h5>
+                            <h3>R$31,99</h3>
+                            <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
+                        </div>
                     </div>
-                    <div class="home-text">
-                        <h1>Ração Golden Para<br>Gatos Castrados</h1>
-                        <h5>Sabor salmão 1,0kg</h5>
-                        <h3>R$31,99</h3>
-                        <a href="./golden.html" class="btn">Adicionar ao carrinho</a>
-                    </div>
-                </div>
+                </a>
                 <div class="item2">
                     <div class="produto2">
                         <li><img src="assets/racao-golden-dog-removebg-preview.png" onclick="slider('assets/racao-golden-dog-removebg-preview.png')"></li>
