--- a/carrinho.html
+++ b/carrinho.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="carrinho.css">
     <script defer src="template.js"></script>
-    <title>Template PetLevi</title>
+    <title>Carrinho PetLevi</title>
 </head>
 
 <body>
@@ -38,10 +38,15 @@
 
     <div class="section">
         <div class="seucarrinho">
-            <p>________________________________________________________________</p>
+            <br>
+            <br>
+            <br>
+            <hr>
             <br>
             <p>Seu Carrinho</p>
-            <p>________________________________________________________________</p>
+            <br>
+            <hr>
+            <br>
             <br>
         </div>
 
@@ -73,10 +78,14 @@
         </section>
 
         <div class="contatos">
-            <p>________________________________________________________________</p>
+            <br>
+            <br>
+            <hr>
             <br>
             <p>Contatos</p>
-            <p>________________________________________________________________</p>
+            <br>
+            <hr>
+            <br>
             <br>
         </div>
 
