link na logo em carrinho

--- a/carrinho.html
+++ b/carrinho.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="nav">
             <div class="logo">
-                <a><img src="assets/LogoLeVi-White-removebg-preview (1).png" class="img">Pet Levi</a>
+                <a href="./template.html"><img src="assets/LogoLeVi-White-removebg-preview (1).png" class="img">Pet Levi</a>
             </div>
             <div class="nav-list">
                 <ul class="nav-list">
